#238 Show the list of customers from the discount on the PP edit page

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/discounts/template/price-product-edit-discounts-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/discounts/template/price-product-edit-discounts-section.html
@@ -51,6 +51,21 @@
 						</small>
 					</div>
 				</div>
+
+				<div class="row">
+					<div class="col-xs-12">
+						<p *ngIf="discountVM.isPublic()">
+							<span class="bold-text green-color">{{ 'Public' | translate }} </span>
+							<br>
+							<small class="gray-color">{{ 'Discount applied for all the customers' }}</small>
+						</p>
+						<p *ngIf="!discountVM.isPublic()">
+							<span class="bold-text red-color">{{ 'Private' | translate }} </span>
+							<br>
+							<small class="gray-color">{{ discountVM.customerListLabel }}</small>
+						</p>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="col-xs-12" *ngIf="discountContainer.isEmpty()">
