--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/dynamic-price-modal/template/dynamic-price-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/dynamic-price-modal/template/dynamic-price-modal.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="form-group">
-        <label>{{ 'Description' | translate }} *</label>
+        <label>{{ 'Description' | translate }}</label>
         <div class="input-group">
             <input type="text" class="form-control" [(ngModel)]="dynamicPriceVM.description" name="dynamicPriceDescription" />
         </div>
