#147 Created report for reservations booked on a price product (back end only)

--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/discounts/template/price-product-edit-discounts-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/discounts/template/price-product-edit-discounts-section.html
@@ -60,7 +60,7 @@
 							<small class="gray-color">{{ 'Discount applied for all the customers' }}</small>
 						</p>
 						<p *ngIf="!discountVM.isPublic()">
-							<span class="bold-text red-color">{{ 'Private' | translate }} </span>
+							<span class="bold-text red-color">{{ 'Confidential' | translate }} </span>
 							<br>
 							<small class="gray-color">{{ discountVM.customerListLabel }}</small>
 						</p>
