#147 Created tab with the bookings for PP report

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/key-metrics-report/template/settings-key-metrics-report.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/reports/pages/key-metrics-report/template/settings-key-metrics-report.html
@@ -2,7 +2,7 @@
 	<div class="row basic-info-form">
 		<div class="col-xs-12 col-md-6">
 			<label class="control-label">
-				<h3>{{ 'Generate Key Metrics Report' | translate }}</h3><small>{{ "Get your hotel's key metrics" | translate }}</small>
+				<h3>{{ 'Key Metrics Report' | translate }}</h3><small>{{ "Get your hotel's key metrics" | translate }}</small>
 			</label>
 			<hr>
 			<div class="row">
