#147 Allow the selection of the booking confirmation status in the bookings for a price product report

--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -18,7 +18,7 @@
 
 			<hr>
 
-			<label class="control-label">Payment Methods</label>
+			<label class="control-label">{{'Payment Methods' | translate}}</label>
 			<div class="well form-group">
 				<div class="input-group" [ngClass]="{'form-warning': (!didSelectPaymentMethod()&&didSubmitPage)}">
 					<ul class="list-group checked-list-box">
