#109 Display Rooms Available within the booking search wizard -  fixed suggestions after code review

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/modal/template/room-availability-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-search/modal/template/room-availability-modal.html
@@ -12,7 +12,7 @@
 		<tbody>
 			<tr *ngFor="let roomCategoryItem of roomCategoryItemList">
 				<td>{{roomCategoryItem.stats.roomCategory.displayName}}</td>
-				<td>{{roomCategoryItem.stats.noOfRooms - roomCategoryItem.noOccupiedRooms}}</td>
+				<td [ngClass]="{'red-color' : roomCategoryItem.availableRooms <= 0}">{{roomCategoryItem.availableRooms}}</td>
 				<td>{{roomCategoryItem.stats.noOfRooms}}</td>
 			</tr>
 		</tbody>
