--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/discounts/template/price-product-edit-discounts-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/discounts/template/price-product-edit-discounts-section.html
@@ -43,11 +43,33 @@
 						</a>
 					</div>
 				</div>
-
+				
 				<div class="row" *ngIf="discountVM.constraintContainer.isEmpty()">
 					<div class="col-xs-12">
 						<small class="gray-color">
 							{{ 'No constraints. The discount will apply to all the bookings made on this Price Product.' }}
+						</small>
+					</div>
+				</div>
+				
+				<p>{{ 'Intervals' | translate }}</p>
+				<div class="row" *ngFor="let interval of discountVM.intervalList; let i = index">
+					<div class="col-xs-10">
+						<p>
+							<small class="gray-color">{{ interval | thdateinterval }}</small>
+						</p>
+					</div>
+					<div class="col-xs-2" *ngIf="!readonly">
+						<a class="btn btn-xs bold-text" (click)="discountVM.removeInterval(i)"  title="{{ 'Remove' | translate }}">
+							<i class="fa unitpal-font">\</i>
+						</a>
+					</div>
+				</div>
+
+				<div class="row" *ngIf="discountVM.intervalList.length == 0">
+					<div class="col-xs-12">
+						<small class="gray-color">
+							{{ 'No intervals. The discount will apply no matter the booking interval.' }}
 						</small>
 					</div>
 				</div>
