#259 Added discount notification on bookings (discount breakdown is displayed)

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-editor.html
@@ -28,7 +28,7 @@
             <i class="fa fa-tags clickable-item" 
                 *ngIf="hasDiscount()" 
                 (click)="openDiscountInformAlert()"
-                title="{{ 'A discount of %discountValue% has been applied on the room\'s price' | translate:{discountValue: discountValueString} }}"
+                title="{{ 'A discount has been applied on the room\'s price' | translate }}"
                 >
             </i>
             <i class="fa fa-tags clickable-item" 
