#148 Show booking notes in arrivals and departures

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -3967,9 +3967,14 @@ textarea.payer-details {
 .ps-container > .ps-scrollbar-y-rail {
   opacity: 0.6;
 }
+
 .room-availability-modal-table {
     font-size: 12px;
     width: 100%;
     margin: auto;
     float: none;
+}
+
+.booking-notes-icon {
+    padding: 10px 10px 0px 0px
 }
