#271 Do not iterate on the openList on the DDR, but instead on the global dateList & update the state optimistically

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/yield-manager/dashboard/components/yield-price-products/template/yield-price-products.html
@@ -70,12 +70,12 @@
 							</i>
 						</span>
 					</div>
-					<div class="price-products-col" *ngFor="let state of dynamicPrice.openList; let currentIndex = index">
+					<div class="price-products-col" *ngFor="let date of priceProductResults.dateList; let currentIndex = index">
 						<span class="w-100 horizontal-align-center">
 							<input type="radio" 
 								title="{{ getTitleForDynamicPriceInput(priceProduct, dynamicPrice, currentIndex) }}"
 								name="{{ priceProduct.priceProductYieldItemDO.priceProductId + currentIndex }}" 
-								[checked]="stateIsOpen(state)" 
+								[checked]="stateIsOpen(dynamicPrice.openList[currentIndex])" 
 								(click)="openDynamicPrice(priceProduct, dynamicPrice, currentIndex)">
 						</span>
 					</div>
