#269 Removed notes on the invoice if notes field is null

--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -156,13 +156,11 @@
                                 <%}%>
                                 
                                 <br>
-                                Notes:
-                                <br>
+                                
                                 <%if (notesFromBooking.length > 0) {%>
+                                    Notes:<br>
                                     <%= notesFromBooking %>
-                                <% } else{ %>
-                                    -
-                                <%}%>
+                                <% } %>
                                 
                             </td>
                             <td width="10%"></td>
