#269 Remove the 'Generated from UnitPal' label + Logo from booking confirmations' footer

--- a/views/reports/booking-confirmation.ejs
+++ b/views/reports/booking-confirmation.ejs
@@ -196,7 +196,7 @@
             </div>
             <%}%>
 
-            <div class="row">
+            <!--div class="row">
                 <div class="col-md-12" style="text-align:center; width:100%; padding-top: 15px;">
                     <p style="margin: auto;">
                         <span style="font-size: 6px;">Generated from </span>
@@ -204,7 +204,7 @@
                         <small><strong>Unit</strong>Pal</small>
                     </p>
                 </div>
-            </div>
+            </div-->
             
         </div>
         <% }); %>
